# Enana-API

./: .dockerignore  .gitignore  Dockerfile  README.md  ci.py  docker-compose.yml  docs.md  main.py  pyproject.toml  test_api.py  widget.schema.json
.github/workflows/: ci-cd.yml
app/: main.py
app/api/v1/: image.py
app/core/: config.py  logger.py
app/services/: image_generator.py
tests/: test_image_api.py
