[project]
name = "enana-api"
version = "0.1.0"
description = "A FastAPI-based backend service for generating images using Enana UI library"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.12",
    "enana>=0.1.0"
]

[project.optional-dependencies]
dev = [
    # "pytest>=9.0.1",
    # "pytest-cov>=7.0.0",
    "black>=25.11.0",
    "flake8>=7.3.0",
    "isort>=7.0.0"
]

[project.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000"

[tool.uv]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.ruff]
select = ["E", "F", "W"]
line-length = 88
